# clean_architecture_authentication_api_on_rust_with_swagger_logs_tests

./: .gitignore  Cargo.toml  Dockerfile  README.md  check_coverage.sh  docker-compose.yml
docs/: README.md  index.html
docs/config/: README.md
migrations/: 20230924120834_create-function-update_updatedAt.sql  20230924121833_create-table-country.sql  20230924122659_create-table-states.sql  20230924123252_create-table-cities.sql  20230924123626_create-table-addresses.sql  20230924124351_create-table-genders.sql  20230924125239_create-table-sign-ins.sql  20230924125246_create-table-users.sql  20230924125255_create-table-profiles.sql  20230924125324_create-table-telephones.sql  20230924125328_create-table-emails.sql  20231027121719_create-funcion-insert-user-profile.sql  20231027121838_create_funcion_select_full_profile.sql  20231027121929_create_funcion_sign_in_by.sql  20231027122015_create_funcion_update_user_profile.sql  20231027122223_create_view_full_profile.sql
src/: main.rs
src/adapter/: mod.rs
src/adapter/mappers/: map_app_error_to_actix_response.rs  map_io_error_to_app_error.rs  map_sqlx_error_to_app_error.rs  mod.rs
src/adapter/repositories/: user.rs
src/adapter/routers/: index.rs  mod.rs  not_found.rs
src/adapter/services/: jwt.rs
src/adapter/utilities/: bcrypt.rs  id_generator.rs  mod.rs
src/application/services/: mod.rs
src/domain/: mod.rs
src/domain/entities/: user.rs
src/domain/error/: mod.rs
src/domain/types/: mod.rs
src/domain/utilities/: crypto.rs  id_generator.rs  mod.rs
src/infra/: mod.rs
src/infra/config/: cors.rs  database.rs  log.rs  mod.rs  routes.rs  services.rs  utilities.rs
src/infra/docs/: swagger.rs
src/infra/http/: mod.rs
src/tests_e2e/: mod.rs
src/tests_e2e/fixtures/: cities.sql  countries.sql  (+1 more)
(+29 files in other folders)
