[package]
name = "skeleton_rust_rest_api"
version = "0.1.0"
edition = "2021"
authors = ["Wesley Ricardi <wesley.ricardi@outlook.com>"]
description = "A exameple of Rust RESTfull api for future projects"
documentation = "https://localhost:3000/docs"
readme = "README.md"
homepage = "http://localhost:8080/swagger-ui/#"
repository = "https://github.com/wesleyricardi/rust_api_skeleton/"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
async-trait = "0.1.73"
bcrypt = "0.15.0"
chrono = { version = "0.4.31", features = ["alloc"] }
fern = { version = "0.6.2", features = ["colored"] }
jsonwebtoken = "8.3.0"
log = "0.4.20"
mockall = "0.11.4"
serde = "1.0.188"
serde_json = "1.0.107"
sqlx = { version = "0.7.1", features = [
  "postgres",
  "migrate",
  "runtime-tokio-rustls",
  "macros",
  "chrono",
  "time",
] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
utoipa = { version = "3.5.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["actix-web"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.16.1", features = ["derive", "phone"] }
fake = { version = "2.8", features = ["derive"] }
async-recursion = "1.0.5"
actix-files = "0.6.2"
owo-colors = "3.5.0"

[dev-dependencies.cargo-husky]
version = "1.5"
default-features = false                                            # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]
